--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Vite + TS</title>
+		<title>Galactic Fighter</title>
 		<script
 			type="module"
 			src="/src/main.ts"
